--- a/signup.html
+++ b/signup.html
@@ -4,40 +4,84 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Medical Dashboard UI - Sign Up</title>
-    <!-- Load Tailwind CSS from CDN -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <!-- Use Inter font family -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="dark-mode.css">
 </head>
-<body class="bg-gray-100">
-
-    <div class="flex h-screen bg-gray-200 justify-center items-center">
-        <div class="bg-white shadow-md rounded-lg px-8 py-10 max-w-md w-full">
-            <h1 class="text-2xl font-extrabold app-dark-text text-center mb-8">Create an Account</h1>
+<body class="bg-light">
+    <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
+        <symbol id="check2" viewBox="0 0 16 16">
+            <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z"/>
+        </symbol>
+        <symbol id="circle-half" viewBox="0 0 16 16">
+            <path d="M8 15A7 7 0 1 0 8 1v14zm0 1A8 8 0 1 1 8 0a8 8 0 0 1 0 16z"/>
+        </symbol>
+        <symbol id="moon-stars-fill" viewBox="0 0 16 16">
+            <path d="M6 .278a.768.768 0 0 1 .08.858 7.208 7.208 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277.527 0 1.04-.055 1.533-.16a.787.787 0 0 1 .81.316.733.733 0 0 1-.031.893A8.349 8.349 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.752.752 0 0 1 6 .278z"/>
+            <path d="M10.794 3.148a.217.217 0 0 1 .412 0l.387 1.162h1.212a.217.217 0 0 1 .162.328l-.988.894.386 1.162a.217.217 0 0 1-.328.244l-1.054-.762-.988.894a.217.217 0 0 1-.328-.244l.387-1.162-.989-.894a.217.217 0 0 1 .163-.328h1.212l.387-1.162zM13.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.156 1.156 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.156 1.156 0 0 0-.732-.732l-.774-.258a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732L13.863.1z"/>
+        </symbol>
+        <symbol id="sun-fill" viewBox="0 0 16 16">
+            <path d="M8 12a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0zm0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13zm8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5zM3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8zm10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0zm-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707zM4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z"/>
+        </symbol>
+    </svg>
+    <div class="d-flex vh-100 bg-secondary-subtle justify-content-center align-items-center">
+        <div class="dropdown position-absolute top-0 end-0 mt-3 me-3">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="bd-theme" data-bs-toggle="dropdown" aria-expanded="false">
+                <svg class="theme-icon-active" width="1em" height="1em" fill="currentColor"><use href="#circle-half"></use></svg>
+                <span class="visually-hidden" id="bd-theme-text">Toggle theme</span>
+            </button>
+            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="bd-theme-text">
+                <li>
+                    <button type="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="light" aria-pressed="false">
+                        <svg width="1em" height="1em" fill="currentColor" class="me-2 opacity-50"><use href="#sun-fill"></use></svg>
+                        Light
+                        <svg class="ms-auto d-none" width="1em" height="1em" fill="currentColor"><use href="#check2"></use></svg>
+                    </button>
+                </li>
+                <li>
+                    <button type="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="dark" aria-pressed="false">
+                        <svg width="1em" height="1em" fill="currentColor" class="me-2 opacity-50"><use href="#moon-stars-fill"></use></svg>
+                        Dark
+                        <svg class="ms-auto d-none" width="1em" height="1em" fill="currentColor"><use href="#check2"></use></svg>
+                    </button>
+                </li>
+                <li>
+                    <button type="button" class="dropdown-item d-flex align-items-center active" data-bs-theme-value="auto" aria-pressed="true">
+                        <svg width="1em" height="1em" fill="currentColor" class="me-2 opacity-50"><use href="#circle-half"></use></svg>
+                        Auto
+                        <svg class="ms-auto d-none" width="1em" height="1em" fill="currentColor"><use href="#check2"></use></svg>
+                    </button>
+                </li>
+            </ul>
+        </div>
+        <div class="bg-white shadow rounded-3 p-4 p-md-5" style="max-width: 400px; width: 100%;">
+            <h1 class="h2 fw-bold text-dark text-center mb-4">Create an Account</h1>
             <form action="index.html" method="GET">
-                <div class="mb-4">
-                    <label for="fullname" class="block text-gray-700 text-sm font-bold mb-2">Full Name</label>
-                    <input type="text" id="fullname" name="fullname" placeholder="Enter your full name" class="w-full py-3 px-4 text-gray-700 bg-gray-100 rounded-xl focus:ring-2 focus:ring-purple-300 focus:outline-none transition duration-150 shadow-inner">
+                <div class="mb-3">
+                    <label for="fullname" class="form-label fw-bold">Full Name</label>
+                    <input type="text" id="fullname" name="fullname" placeholder="Enter your full name" class="form-control py-3">
+                </div>
+                <div class="mb-3">
+                    <label for="email" class="form-label fw-bold">Email Address</label>
+                    <input type="email" id="email" name="email" placeholder="Enter your email" class="form-control py-3">
+                </div>
+                <div class="mb-3">
+                    <label for="password" class="form-label fw-bold">Password</label>
+                    <input type="password" id="password" name="password" placeholder="Enter your password" class="form-control py-3">
                 </div>
                 <div class="mb-4">
-                    <label for="email" class="block text-gray-700 text-sm font-bold mb-2">Email Address</label>
-                    <input type="email" id="email" name="email" placeholder="Enter your email" class="w-full py-3 px-4 text-gray-700 bg-gray-100 rounded-xl focus:ring-2 focus:ring-purple-300 focus:outline-none transition duration-150 shadow-inner">
+                    <label for="confirm-password" class="form-label fw-bold">Confirm Password</label>
+                    <input type="password" id="confirm-password" name="confirm-password" placeholder="Confirm your password" class="form-control py-3">
                 </div>
-                <div class="mb-4">
-                    <label for="password" class="block text-gray-700 text-sm font-bold mb-2">Password</label>
-                    <input type="password" id="password" name="password" placeholder="Enter your password" class="w-full py-3 px-4 text-gray-700 bg-gray-100 rounded-xl focus:ring-2 focus:ring-purple-300 focus:outline-none transition duration-150 shadow-inner">
-                </div>
-                <div class="mb-6">
-                    <label for="confirm-password" class="block text-gray-700 text-sm font-bold mb-2">Confirm Password</label>
-                    <input type="password" id="confirm-password" name="confirm-password" placeholder="Confirm your password" class="w-full py-3 px-4 text-gray-700 bg-gray-100 rounded-xl focus:ring-2 focus:ring-purple-300 focus:outline-none transition duration-150 shadow-inner">
-                </div>
-                <button type="submit" class="w-full bg-app-primary text-white py-3 rounded-xl font-bold shadow-md hover:bg-purple-700 transition">Sign Up</button>
+                <button type="submit" class="btn btn-primary w-100 py-3 fw-bold shadow">Sign Up</button>
             </form>
-            <p class="text-center text-gray-500 text-sm mt-6">
-                Already have an account? <a href="login.html" class="text-sm app-text-primary font-medium hover:underline">Login</a>
+            <p class="text-center text-muted small mt-4">
+                Already have an account? <a href="login.html" class="app-text-primary text-decoration-none">Login</a>
             </p>
         </div>
     </div>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="dark-mode.js"></script>
 </body>
 </html>
